--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+# Dependências
 node_modules
+
+# Build
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Env
+.env
+.env.local
+.env.production.local
+
+# Editor
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +21,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
