--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moneydash",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,21 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "0.344.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.22.3",
-    "@dnd-kit/core": "6.1.0",
-    "@dnd-kit/sortable": "8.0.0",
-    "@dnd-kit/utilities": "3.2.2",
-    "@supabase/supabase-js": "2.39.3",
-    "react-window": "1.8.10",
-    "react-virtualized-auto-sizer": "1.0.24"
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.2",
     "vite": "^6.2.0"
   }
 }
